--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <table cellspacing="20 ">
         <tr>
             <td>
-                <img src="/image/img.png" alt="Vikrant's Photo">
+                <img src="https://scontent.fccu1-1.fna.fbcdn.net/v/t1.0-9/118636312_1554537768062353_116919944792057884_n.jpg?_nc_cat=106&_nc_sid=730e14&_nc_ohc=Iwu2BqG7T7MAX_wjQ6z&_nc_ht=scontent.fccu1-1.fna&oh=fc079a9fa9970ab4a16d19e48a402625&oe=5F6C7A40" alt="Vikrant's Photo">
             </td>
             <td>
                 <h1>Vikrant Singh</h1>
