--- a/index.html
+++ b/index.html
@@ -31,19 +31,17 @@
     <h3><strong> HOBBIES</strong></h3>
     <ol type="1">
         <li>
-            <a href="https://www.youtube.com/watch?v=B35HYksyMVs" target="_blank">Gaming and Computer Hardware
-                Knowledge</a>
+            <a href="https://www.youtube.com/watch?v=B35HYksyMVs" target="_blank">Gamer</a>
         </li>
         <li>
             <a href="https://scontent.fccu1-1.fna.fbcdn.net/v/t1.0-9/94252714_1447654948750636_6436522815389696000_o.jpg?_nc_cat=104&_nc_sid=84a396&_nc_ohc=i-WK-AWreNcAX-tBoi-&_nc_ht=scontent.fccu1-1.fna&oh=9f6130bf0c478a5642901b1662d3bf99&oe=5F6C0D7F"
-                target="_blank">Bike Rider</a>
+                target="_blank">Bike Riding</a>
         </li>
         <li>
-            <a href="https://www.youtube.com/watch?v=Bjq-T0BLpy4" target="_blank">Workout and Self Trainer</a>
+            <a href="https://www.youtube.com/watch?v=Bjq-T0BLpy4" target="_blank">Weight lifting and Calisthenics</a>
         </li>
         <li>
-            <a href="https://pbs.twimg.com/profile_images/744849215675838464/IH0FNIXk_400x400.jpg" target="_blank">Web
-                development (My Teacher)</a>
+            <a href="https://www.youtube.com/channel/UCT4ry5vgmcswJL8TZy0vMXQ?view_as=subscriber" target="_blank">Love to make YouTube videos</a>
         </li>
     </ol>
 
@@ -63,7 +61,7 @@
                 C++
             </td>
             <td>
-                ⭐⭐⭐
+                ⭐⭐⭐⭐
             </td>
         </tr>
         <tr>
@@ -87,7 +85,7 @@
                 Java and Android Studio
             </td>
             <td>
-                ⭐⭐⭐
+                ⭐⭐⭐⭐
             </td>
         </tr>
 
@@ -99,7 +97,7 @@
         <thead>
             <tr>
                 <td>
-                    INSTITUTE
+                    EXAMINATION
                 </td>
                 <td>
                     RESULTS
@@ -152,6 +150,8 @@
     </table>
     <hr>
     <h1><a href="contactus.html">Contact Details</a></h1>
+    <hr>
+    <h4>Note: This is my first site ever made and it is completely based on <strong>HTML</strong>.</h4>
     
 
 
