--- a/contactus.html
+++ b/contactus.html
@@ -6,15 +6,13 @@
     <title>Contact Us</title>
 </head>
 <body>
-    <form action="mailto:vikrantsingh0016@gmail.com" method="post" enctype="multipart/form-data">
-       <div><label>Your name: </label>
-        <input type="text"><br></div><br>
-      <div> <label>You Email:</label>
-        <input type="email"><br></div>
-      <div> <label>Enter you message :</label><br>
-        <textarea name="message" id="" cols="30" rows="10"></textarea></div><br>
-        <input type="submit">
-
-    </form>
+    <h1>Contact me</h1>
+  <h3>Email: vikrantsingh0016@gmail.com</h3>
+  <h3>Github: "https://github.com/VikrantSingh16" or <a href="https://github.com/VikrantSingh16" target="_blank">Click here</a></h3>
+  <h3>Instagram: "https://www.instagram.com/vikrantsingh0016/?hl=en" or <a href="https://www.instagram.com/vikrantsingh0016/?hl=en" target="_blank">Click here</a></h3>
+  <h3>Facebook: "https://www.facebook.com/profile.php?id=100005184337693" or <a href="https://www.facebook.com/profile.php?id=100005184337693" target="_blank">Click here</a></h3>
+  <h3>Twitter:"https://twitter.com/vikrantsingh004" or <a href="https://twitter.com/vikrantsingh004" target="_blank">Click here</a></h3>
+  <h3>YouTube account: "https://www.youtube.com/channel/UCT4ry5vgmcswJL8TZy0vMXQ?view_as=subscriber" or <a href="https://www.youtube.com/channel/UCT4ry5vgmcswJL8TZy0vMXQ?view_as=subscriber" target="_blank">Click here</a></h3>
+    
 </body>
 </html>
